part1/project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwkproject-svc
spec:
  type: NodePort
  selector:
    app: dwkproject
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 8080
      targetPort: 8080
